--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -24,7 +24,7 @@ jobs:
           mkdir -v -p ~/.local/share/godot/templates
           mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
       - name: Build
-        run: ./build.sh
+        run: chmod +x ./build.sh && ./build.sh
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
