--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -33,4 +33,6 @@ jobs:
       - name: Deploy to GitHub Pages 🚀        
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
-          folder: dist/
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist/         
